--- a/django_server/dublin_bus/templates/bus/index.html
+++ b/django_server/dublin_bus/templates/bus/index.html
@@ -1,5 +1,58 @@
 {% extends 'base_layout.html' %}
+{% load static %} 
 
 {% block content %}
-    <h1>Hello, I'm still working on templating :) Please be patient! </h1>
+    <div class="row">
+    <div class="col-md-6" id="col1">
+        <div class="row"><h1>Journey Planner</h1><h2 class="col-sm-6"></h2></div>
+        <div class="col-md-12" id="journey-planner">
+       
+        <form>
+            <p>&nbsp;From:&nbsp;</p>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Enter a bus stop or an address">
+              <div class="input-group-btn">
+                <button class="btn btn-default" type="submit">
+                  <i class="glyphicon glyphicon-search"></i>
+                </button>
+              </div>
+            </div>
+          </form>
+    
+        <form>
+            <p>&nbsp;To:&nbsp;</p>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Enter a bus stop or an address">
+              <div class="input-group-btn">
+                <button class="btn btn-default" type="submit">
+                  <i class="glyphicon glyphicon-search"></i>
+                </button>
+              </div>
+            </div>
+          </form>
+  
+        <p>&nbsp;Travel Date and Time:&nbsp;</p>
+        <input type="text" id="picker" class="form-control">
+        
+          </div>
+          <button type="button" class="btn btn-warning btn-lg">Submit</button>  
+    </div>
+    
+    <div class="col-md-6"><iframe class="d-lg-flex justify-content-lg-center align-items-lg-end" allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBDWHM_csX0pm5yQAmuwQKDWwH0DS2Tmgk&amp;q=Dublin+Ireland&amp;zoom=15.5" width="100%"
+        height="450"></iframe></div>
+        </div>
+
+        <script>
+            $('#picker').datetimepicker({
+                timepicker: true,
+                datepicker: true,
+                format: 'd-m-y H:f',
+                value: '18-06-2020 09:45',
+                hours12: false,
+                step: 30,
+                yearStart: 2020,
+                yearEnd:2020,
+                weeks: true,
+            })
+        </script>
 {% endblock %}
