--- a/django_server/dublin_bus/templates/bus/index.html
+++ b/django_server/dublin_bus/templates/bus/index.html
@@ -11,11 +11,6 @@
             <p>&nbsp;From:&nbsp;</p>
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Enter a bus stop or an address">
-              <div class="input-group-btn">
-                <button class="btn btn-default" type="submit">
-                  <i class="glyphicon glyphicon-search"></i>
-                </button>
-              </div>
             </div>
           </form>
     
@@ -23,36 +18,42 @@
             <p>&nbsp;To:&nbsp;</p>
             <div class="input-group">
               <input type="text" class="form-control" placeholder="Enter a bus stop or an address">
-              <div class="input-group-btn">
-                <button class="btn btn-default" type="submit">
-                  <i class="glyphicon glyphicon-search"></i>
-                </button>
-              </div>
             </div>
           </form>
   
-        <p>&nbsp;Travel Date and Time:&nbsp;</p>
-        <input type="text" id="picker" class="form-control">
-        
+      
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+         
+      <div class="row">
+          <div class='col-lg-6'>
+            <p>Travel Date and Time:</p>
+              <input type='text' class="form-control" id='datetimepicker4' />
+          </div>
+          <script type="text/javascript">
+          var today = new Date();
+          var end = new Date('12/31/2020');
+         
+              $(function () {
+                  $('#datetimepicker4').datetimepicker({
+                      minDate: today,
+                      maxDate: end,
+                      format: 'DD/MM/YY H:m A',
+
+                  });
+              });
+              </script>
+      </div>
           </div>
           <button type="button" class="btn btn-warning btn-lg">Submit</button>  
     </div>
-    
+ 
+
     <div class="col-md-6"><iframe class="d-lg-flex justify-content-lg-center align-items-lg-end" allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBDWHM_csX0pm5yQAmuwQKDWwH0DS2Tmgk&amp;q=Dublin+Ireland&amp;zoom=15.5" width="100%"
         height="450"></iframe></div>
         </div>
-
-        <script>
-            $('#picker').datetimepicker({
-                timepicker: true,
-                datepicker: true,
-                format: 'd-m-y H:f',
-                value: '18-06-2020 09:45',
-                hours12: false,
-                step: 30,
-                yearStart: 2020,
-                yearEnd:2020,
-                weeks: true,
-            })
-        </script>
+       
+        <script src="https://cdn.jsdelivr.net/momentjs/2.14.1/moment.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css">
 {% endblock %}
