Linked all the javascript and css Linked and changed the file location of template,css and js so that django can find and load it At this commit all stuff work.

--- a/django_server/dublin_bus/bus/templates/bus/base_layout.html
+++ b/django_server/dublin_bus/bus/templates/bus/base_layout.html
@@ -2,6 +2,8 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,9 +11,11 @@
     <title>Dublin Bus</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="{% static 'styles.css' %}">       
-
+    <link rel="stylesheet" href="{% static 'bus/css/styles.css' %}">       
+    <link rel="stylesheet" href="{% static 'bus/css/map.css' %}">
 </head>
+
+
 <body>
     <nav class="navbar navbar-light navbar-expand-md d-flex navigation-clean">
         <div class="container-fluid"><img class="img-fluid border rounded-0 d-inline-block flex-shrink-1 mr-auto" data-bs-hover-animate="pulse" src="{% static 'db-logo-2.jpeg' %}" width="50" height="50" style="padding: 10;margin: 10;background-color: #fbd000;"><a class="navbar-brand"
