--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -2,6 +2,12 @@
 {% load static %} 
 
 {% block content %}
+<!--Jquery for map-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!--Script for Map and Marker 01-->
+<script src="{% static 'bus/js/map_init.js' %}"></script>
+
+
     <div class="row">
     <div class="col-md-6" id="col1">
         <div class="row"><h1>Journey Planner</h1><h2 class="col-sm-6"></h2></div>
@@ -10,14 +16,14 @@
         <form>
             <p>&nbsp;From:&nbsp;</p>
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Enter a bus stop or an address">
+              <input id="searchTextField_start" type="text" class="form-control" placeholder="Enter a bus stop or an address">
             </div>
           </form>
     
         <form>
             <p>&nbsp;To:&nbsp;</p>
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Enter a bus stop or an address">
+              <input id="searchTextField_destination" type="text" class="form-control" placeholder="Enter a bus stop or an address">
             </div>
           </form>
   
@@ -48,12 +54,21 @@
     </div>
  
 
-    <div class="col-md-6"><iframe class="d-lg-flex justify-content-lg-center align-items-lg-end" allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBDWHM_csX0pm5yQAmuwQKDWwH0DS2Tmgk&amp;q=Dublin+Ireland&amp;zoom=15.5" width="100%"
-        height="450"></iframe></div>
+    <div class="col-md-6"><div id="map"> hello </div></div>
         </div>
        
         <script src="https://cdn.jsdelivr.net/momentjs/2.14.1/moment.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css">
+
+
+
+ <!--MAPS API-->
+<script
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFtH8qWuX2LGmHcicY-vLHfYuB7D6WI7Y&libraries=places&callback=initMap" >
+
+</script>
+<script src="{% static 'bus/js/map_auto_complete_text.js' %}"></script>
+
 {% endblock %}
