Made the login page connect with a softlink added login to bus/urls and bus/views

--- a/django_server/dublin_bus/bus/templates/bus/base_layout.html
+++ b/django_server/dublin_bus/bus/templates/bus/base_layout.html
@@ -25,7 +25,7 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Fare Estimator</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Dublin Bus</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="login">Log In</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="{% url 'login' %}">Log In</a></li>
                 </ul>
         </div>
 </div>
