--- a/django_server/dublin_bus/bus/templates/bus/login.html
+++ b/django_server/dublin_bus/bus/templates/bus/login.html
@@ -1,5 +1,5 @@
 
-{% extends 'base_layout.html' %}
+{% extends 'bus/base_layout.html' %}
 {% load static %}
 {% block content %}
 <div class="row"><h1>User Log-in</h1><h2 class="col-sm-6"></h2></div>
