I added a favicon for fun

--- a/django_server/dublin_bus/bus/templates/bus/base_layout.html
+++ b/django_server/dublin_bus/bus/templates/bus/base_layout.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" >
     <title>Dublin Bus</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
 
     <link rel="stylesheet" href="{% static 'bus/css/styles.css' %}">       
     <link rel="stylesheet" href="{% static 'bus/css/map.css' %}">
