Basic forms with registration feature made

--- a/django_server/dublin_bus/bus/templates/bus/base_layout.html
+++ b/django_server/dublin_bus/bus/templates/bus/base_layout.html
@@ -31,6 +31,13 @@
 </div>
 </nav>
     <div class="wrapper">
+        {% if messages %}
+        {% for messages in messages %}
+            <div class = "alert alert-{{ messages.tags }}">
+              {{ messages }}
+            </div>
+        {% endfor %}
+    {% endif %}
         {% block content %}
         {% endblock %}
     </div>
