--- a/django_server/dublin_bus/users/templates/users/register.html
+++ b/django_server/dublin_bus/users/templates/users/register.html
@@ -1,11 +1,12 @@
 {% extends "bus/base_layout.html" %}
+{% load crispy_forms_tags %}
 {% block content %}
 <div class = "content-section">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4"> Join Today</legend>
-            {{ form.as_p }}
+            {{ form|crispy }}
         </fieldset>
         <div class = "form-group">
             <button class="btn btn-outline-info" type="submit">Sign Up</button>
