Fixed the navigatoin bar to display when in mobile view. All navigation links correctly go to the corresponding pages. I also added some styling to the sign up page so that it matched the theme better

--- a/django_server/dublin_bus/users/templates/users/register.html
+++ b/django_server/dublin_bus/users/templates/users/register.html
@@ -1,22 +1,28 @@
 {% extends "bus/base_layout.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class = "content-section">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<div class = "row">
+<div class = "col-lg-6">
+<div class = "content-section col px-md-5">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4"> Join Today</legend>
+            <h1> Join Today</h1>
             {{ form|crispy }}
         </fieldset>
         <div class = "form-group">
-            <button class="btn btn-outline-info" type="submit">Sign Up</button>
+           
+            <small class="text-muted">Already Have an Account?
+                <a class = "ml-2" href="{% url 'login' %}">Sign In</a>
+                <button class="btn btn-warning btn-lg" type="submit">Sign Up</button>
         </div>
         <div class="border-top pt-3">
-            <small class="text-muted">Already Have an Account?
-                <a class = "ml-2" href="#">Sign In</a>
+           
             </small>
         </div>
     </form>
 </div>
-
+</div> 
+</div>
 {% endblock content %}
