minor CSS changes to the Buttons

--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -42,7 +42,7 @@
       </div>
           </div>
         </form>
-          <button type="submit" form="form1" value="Submit" class="btn btn-warning btn-lg" onclick="myFunction()">Submit</button>  
+        <input type="submit" form="form1" class="btn btn-warning btn-info btn-lg" value="Submit" onclick="myFunction()" style="margin-top: 20px;">
     </div>
     <script>
       function myFunction() {
