--- a/django_server/dublin_bus/bus/templates/bus/login.html
+++ b/django_server/dublin_bus/bus/templates/bus/login.html
@@ -17,9 +17,10 @@
   <div class="form-group">
     <label for="pwd">Password:</label>
     <input type="password" class="form-control" id="pwd">
-    <button type="button" class="btn btn btn-lg">Sign up</button> <button type="button" class="btn btn-warning btn-lg">Log in</button>
 
   </div>
+  <button type="button" class="btn btn btn-lg" style="margin-top: 20px;">Sign up</button> <button type="button" class="btn btn-warning btn-lg" style="margin-top: 20px;">Log in</button>
+
   </div>
   <div class="col-md-6"><img src="{% static 'bus-3.jpeg' %}" width="500px"; height="400px"></div>
   </div>
