even more minor CSS changes to the Buttons because I forgot totest in mobile view

--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -42,7 +42,7 @@
       </div>
           </div>
         </form>
-        <input type="submit" form="form1" class="btn btn-warning btn-info btn-lg" value="Submit" onclick="myFunction()" style="margin-top: 20px;">
+        <input type="submit" form="form1" class="btn btn-warning btn-info btn-lg" value="Submit" onclick="myFunction()" style="margin-top: 10px; margin-bottom: 10px;">
     </div>
     <script>
       function myFunction() {
