minor CSS changes to make style uniform across all pages

--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -2,9 +2,11 @@
 {% load static %} 
 
 {% block content %}
+<h1>Journey Planner</h1>
     <div class="row">
+      
     <div class="col-md-6" id="col1">
-        <div class="row"><h1>Journey Planner</h1><h2 class="col-sm-6"></h2></div>
+        <div class="row"><h2 class="col-sm-6"></h2></div>
         <div class="col-md-12" id="journey-planner">
        
         <form id="form1">
