--- a/django_server/dublin_bus/users/templates/users/register.html
+++ b/django_server/dublin_bus/users/templates/users/register.html
@@ -2,13 +2,14 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<h1>Join Today</h1>
 <div class = "row">
 <div class = "col-lg-6">
-<div class = "content-section col px-md-5">
+<div class = "content-section">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <h1> Join Today</h1>
+    
             {{ form|crispy }}
         </fieldset>
         <div class = "form-group">
