--- a/django_server/dublin_bus/users/templates/users/register.html
+++ b/django_server/dublin_bus/users/templates/users/register.html
@@ -3,10 +3,10 @@
 {% block content %}
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <h1>Join Today</h1>
-<div class = "row">
-<div class = "col-lg-6">
-<div class = "content-section">
-    <form method="POST">
+<div class="row">
+<div class="col-md-6" id="col1">
+<div class = "content-section cold-md-12">
+    <form method="POST" style="margin-top: 30px;">
         {% csrf_token %}
         <fieldset class="form-group">
     
