--- a/django_server/dublin_bus/bus/templates/bus/login.html
+++ b/django_server/dublin_bus/bus/templates/bus/login.html
@@ -3,10 +3,8 @@
 {% load static %}
 {% block content %}
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<h1>User Log-in</h1>
-<div class="row px-md-5">
-
-  <h2 class="col-sm-6"></h2>
+  <h1>User Log-in</h1>
+<div class="row">
 </div>
 <div class="row">
   <div id="col2" class="col-md-6">
