--- a/django_server/dublin_bus/bus/templates/bus/base_layout.html
+++ b/django_server/dublin_bus/bus/templates/bus/base_layout.html
@@ -30,16 +30,16 @@
     <div class="collapse navbar-collapse" id="menu">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="https://www.transportforireland.ie/fares/bus-fares/">Fare Estimator</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.dublinbus.ie/">Dublin Bus Website</a>
-        </li>
+            <a class="nav-link" href="{% url 'account' %}">Test Account</a>
+          </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'login' %}">Log In</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="{% url 'register' %}">Sign Up</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'tourism' %}">Tourism</a>
           </li>
       </ul>
     </div>
