A full revamp of the map and where the journey planner sits. There is still some work to be done for the mobile version

--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -172,6 +172,24 @@ label {
 }
 
 #map{
-    height:400px;
+    height:800px;
     width:100%;
 }
+#floating-panel {
+    position: absolute;
+    z-index: 5;
+    padding: 15px;
+    background-color: #fff;
+    border: 1px solid#252d5a;
+    width: 265px;
+
+  }
+  #floating-panel2 {
+    position: relative;
+    left: 55px;
+    z-index: 5;
+    background-color: #fff;
+    padding: 25px;
+    line-height: 30px;
+    padding-left: 50px;
+  }
