--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -3,10 +3,9 @@
 
 {% block content %}
 <h1>Journey Planner</h1>
-<p id="test"></p>
-    <div class="row">
-    <div class="col-md-6" id="col1">
-        <div class="col-md-12" id="journey-planner">
+
+    <div class="col-md-8">
+      <div id="floating-panel">
         <form id="form1">
             <label>&nbsp;From:&nbsp;</label>
             <div class="input-group">
@@ -21,14 +20,10 @@
               <!-- Hidden fields are for storing lat lon not for showing -->
               <input type="hidden" id="stop_lat" />
               <input type="hidden" id="stop_lng" />
-
-            </div>
          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
          
-      <div class="row">
-          <div class='col-lg-6'>
             <label>Travel Date and Time:</label><input type='text' class="form-control" id='datetimepicker4' />
-          </div>
+
           <!-- Script for the Date Time Picker -->
           <script type="text/javascript"> 
           var today = new Date();
@@ -41,13 +36,15 @@
                   });
               });
               </script>
-      </div>
-          </div>
         </form>
-      
-        <input type="button" form="form1" class="btn btn-warning btn-info btn-lg" value="Submit" onclick="myFunction()" style="margin-top: 10px; margin-bottom: 10px;">
-    </div>
-  
+<input type="button" form="form1" class="btn btn-warning btn-info btn-lg" value="Submit" onclick="myFunction()" style="margin-top: 10px; margin-bottom: 10px;">
+</div>   
+</div>
+</div>
+<!-- This code below will one day be the pop up journey guide that tells you step by step things -->
+<!-- <div id="floating-panel2">  
+  <p id="test"></p>
+    </div> -->
     <script>
       function myFunction() {
         var input1 = document.getElementById("searchTextField_start").value;
@@ -56,7 +53,7 @@
         document.getElementById("test").innerHTML = "The starting destination is: " + input1 + " and the destination is " + input2 + " and the time and date is " + input3;
       }
       </script>
-    <div class="col-md-6"><div id="map"> hello </div></div>
+    <div><div id="map"> hello </div></div>
         </div>
         <script src="https://cdn.jsdelivr.net/momentjs/2.14.1/moment.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -67,6 +64,7 @@
 <!--Jquery for map-->
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
 <!--Script for Map and Marker 01-->
+
 <script src="{% static 'bus/js/map_init.js' %}"></script>
  <!--MAPS API-->
 <script 
