Feature login/logout added User can now login and logout Navbar will change accordingly Login page and logout page made settings to redirect to login page after registrtation Still need to impliment restrictions

--- a/django_server/dublin_bus/users/templates/users/login.html
+++ b/django_server/dublin_bus/users/templates/users/login.html
@@ -14,12 +14,12 @@
             {{ form|crispy }}
         </fieldset>
         <div class = "form-group">
-            <button class="btn btn-warning btn-lg" type="submit">Sign Up</button>
+            <button class="btn btn-warning btn-lg" type="submit">Sign In</button>
         </div>
         <div class = "form-group">
            
             <small class="text-muted">Dont have an Account?
-                <a class = "ml-2" href="{% url 'login' %}">Sign Up</a>
+                <a class = "ml-2" href="{% url 'register' %}">Sign Up</a>
         </div>
     </form>
     
