--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -1,11 +1,11 @@
 body{}
 
-h1{
+h3, h1{
     font-family:Orienta, sans-serif !important;
     color: rgb(248,250,251) !important;
     background-color: #252d5a !important;
     padding-left: 18px !important;
-    padding-right: 18px !important;
+    position: static;
 }
 #col1 {
     background-position: center !important;
