I found a dumb mistake where I used BS3 and BS4 code CDN in the UI. I am improving the code to better reflect BS4 only and fixing the bugs that this mistake has caused as well as any design issues. I also cleaned up the code and created an input.js file for any jquery and JS involved in the main journey planner. Removing BS3 has changed the functionality of some of the JS and Jquery so I am working on fixing those issues too. Whoops

--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -1,43 +1,33 @@
 body{}
 
 h3, h1{
-    font-family:Orienta, sans-serif !important;
-    color: rgb(248,250,251) !important;
-    background-color: #252d5a !important;
-    padding-left: 18px !important;
-    position: static;
+    font-family:Orienta, sans-serif;
+    color: rgb(248,250,251);
+    background-color: #252d5a;
+    padding-left: 18px;
+   
 }
 #col1 {
-    background-position: center !important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;
-    padding-left: 50px !important;
-    padding-right: 50px !important;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-left: 50px;
+    padding-right: 50px;
     
 }
 #col2 {
-    background-position: center !important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;
-    padding-left: 50px !important;
-    padding-right: 50px !important;
-    
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding-left: 50px;
+    padding-right: 50px;    
 }
-#journey-planner{
-    padding-left: 5px;
-    padding-right: 5px;
-}
-p {
+
+p, input, label {
     font-family:Orienta, sans-serif;
-    padding-top: 10px;
+    /* padding-top: 10px; */
 }
-input {
-    font-family:Orienta, sans-serif;
-    display: block;
-}
-label {
-    font-family:Orienta, sans-serif;
-}
+
 .footer-basic {
     padding: 40px 0;
     background-color: #fff;
@@ -99,76 +89,76 @@ label {
     margin-bottom: 0
 }
 .navigation-clean .navbar-brand {
-    font-weight: 700 !important;
-    color: inherit !important;
-    font-family: Orienta, sans-serif !important; 
+    font-weight: 700;
+    color: inherit;
+    font-family: Orienta, sans-serif; 
 }
 
 .navigation-clean .navbar-brand:hover {
-    color: #222 !important;
+    color: #222;
 }
 .navigation-clean.navbar-dark .navbar-brand:hover {
-    color: #f0f0f0 !important; 
-    font-family:Orienta, sans-serif !important;
+    color: #f0f0f0; 
+    font-family:Orienta, sans-serif;
 }
 
 .navigation-clean .navbar-brand img {
-    height: 100% !important;
-    display: inline-block !important;
-    margin-right: 10px !important;
-    width: auto !important;
+    height: 100%;
+    display: inline-block;
+    margin-right: 10px;
+    width: auto;
     
 }
 
 .navigation-clean .navbar-toggler {
-    border-color: #ddd !important;
-    color: #888 !important;
+    border-color: #ddd;
+    color: #888;
 }
 
 .navigation-clean .navbar-toggler:focus,
 .navigation-clean .navbar-toggler:hover {
-    background: 0 0 !important;
+    background: 0 0;
 }
 
 .navigation-clean.navbar-dark .navbar-toggler {
-    border-color: #555 !important;
-    color: #eee !important;
+    border-color: #555;
+    color: #eee;
 }
 
 .navigation-clean .form-inline,
 .navigation-clean .navbar-collapse {
-    border-top-color: #ddd !important;
+    border-top-color: #ddd;
 }
 
 .navigation-clean.navbar-dark .form-inline,
 .navigation-clean.navbar-dark .navbar-collapse {
-    border-top-color: #333 !important;
-    font-family: Orienta, sans-serif !important;
+    border-top-color: #333;
+    font-family: Orienta, sans-serif;
 }
 .navigation-clean.navbar .navbar-nav .nav-link {
-    padding-left: 18px !important;
-    padding-right: 18px !important;
-    font-family:Orienta, sans-serif !important;
+    padding-left: 18px;
+    padding-right: 18px;
+    font-family:Orienta, sans-serif;
 }
 
 .navigation-clean.navbar-light .navbar-nav .nav-link {
-    color: #465765 !important;
-    font-family:Orienta, sans-serif !important;
+    color: #465765;
+    font-family:Orienta, sans-serif;
 }
 
 .navigation-clean.navbar-light .navbar-nav .nav-link:focus,
 .navigation-clean.navbar-light .navbar-nav .nav-link:hover {
-    color: #37434d !important;
-    background-color: transparent !important;
-    font-family: Orienta, sans-serif !important;
+    color: #37434d;
+    background-color: transparent;
+    font-family: Orienta, sans-serif;
 }
 
 .navigation-clean .navbar-nav > li > .dropdown-menu {
-    margin-top: -5px !important;
-    box-shadow: none !important;
-    background-color: #fff !important;
-    border-radius: 2px !important;
-    font-family: Orienta, sans-serif !important;
+    margin-top: -5px;
+    box-shadow: none;
+    background-color: #fff;
+    border-radius: 2px;
+    font-family: Orienta, sans-serif;
 }
 
 #map{
@@ -178,18 +168,11 @@ label {
 #floating-panel {
     position: absolute;
     z-index: 5;
-    padding: 15px;
-    background-color: #fff;
     border: 1px solid#252d5a;
-    width: 265px;
-
   }
-  #floating-panel2 {
+  #directions {
     position: relative;
-    left: 55px;
     z-index: 5;
     background-color: #fff;
-    padding: 25px;
-    line-height: 30px;
-    padding-left: 50px;
+  
   }
