--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -2,22 +2,20 @@
 {% load static %} 
 
 {% block content %}
-
-
-    <div class="col-md-6">
-      <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#floating-panel">Show Search</button>
-      <div id="floating-panel" class="card col-sm-12 collapse-show">
+<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#floating-panel" id="ok">Hide Planner</button>
+<div id="floating-panel" class="card col-md-3 collapse-show">
         <h3 class="card-title">Journey Planner</h3>
-        <form id="form1" class="card-body">
-            <label>&nbsp;From:&nbsp;</label>
-            <div class="input-group">
+        <form id="form1" class="form">
+          <div class="form-group">
+            <label>From:</label>
+    
               <input id="searchTextField_start" type="text" class="form-control" placeholder="Enter a bus stop or an address">
               <!-- Hidden fields are for storing lat lon not for showing -->
               <input type="hidden" id="start_lat" />
               <input type="hidden" id="start_lng" />
-            </div>
-            <label>&nbsp;To:&nbsp;</label>
-            <div class="input-group">
+         
+            <label>To:</label>
+          
               <input id="searchTextField_destination" type="text" class="form-control" placeholder="Enter a bus stop or an address">
               <!-- Hidden fields are for storing lat lon not for showing -->
               <input type="hidden" id="stop_lat" />
@@ -26,49 +24,25 @@
          
             <label>Travel Date and Time:</label><input type='text' class="form-control" id='datetimepicker4' />
 
-          <!-- Script for the Date Time Picker -->
-          <script type="text/javascript"> 
-          var today = new Date();
-          var end = new Date('12/31/2020');
-              $(function () {
-                  $('#datetimepicker4').datetimepicker({
-                      minDate: today,
-                      maxDate: end,
-                      format: 'DD/MM/YY H:mm A',
-                  });
-              });
-              </script>
+              </div>
         </form>
-        <button type="button" class="btn btn-light" data-toggle="collapse" data-target="#floating-panel">Hide Search</button>
-
-<input type="button" form="form1" class="btn btn-warning btn-info" value="Submit" onclick="myFunction()" style="margin-top: 10px; margin-bottom: 10px;">
-</div>   
+<input type="button" form="form1" class="btn btn-warning" value="Submit" onclick="myFunction()" style="margin-top: 10px; margin-bottom: 10px;">
+  
 </div>
 </div>
-
-
 <!-- This code below will one day be the pop up journey guide that tells you step by step things -->
-<!-- <div id="floating-panel2">  
+
+<!-- <div id="directions" class="card col-sm-6">  
+  <div id="row">
   <p id="test"></p>
+</div>
     </div> -->
-    <script>
-      function myFunction() {
-        var input1 = document.getElementById("searchTextField_start").value;
-        var input2 = document.getElementById("searchTextField_destination").value;
-        var input3 = document.getElementById("datetimepicker4").value;
-        document.getElementById("test").innerHTML = "The starting destination is: " + input1 + " and the destination is " + input2 + " and the time and date is " + input3;
-      }
-      </script>
+
     <div><div id="map"> hello </div></div>
         </div>
-        <script src="https://cdn.jsdelivr.net/momentjs/2.14.1/moment.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css">
-
-
+        <script src="{% static 'bus/js/input.js' %}"></script>
 <!--Jquery for map-->
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!--Script for Map and Marker 01-->
 
 <script src="{% static 'bus/js/map_init.js' %}"></script>
