Added profile for user account The profile model extends user and has fields for leap card and image A signal is used to automatically create a profile when user is created added default images as well.

--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -193,3 +193,19 @@ label {
     line-height: 30px;
     padding-left: 50px;
   }
+
+
+  /* SACHIN TESTING ACCOUNTS PART  @stacy this was for the 
+  accounts section the html is in users/template/accounts.html just for testing*/
+  .account-img {
+    height: 125px;
+    width: 125px;
+    margin-right: 20px;
+    margin-bottom: 16px;
+  }
+  
+  .account-heading {
+    font-size: 2.5rem;
+  }
+
+  /* END OF SACHIN ACCOUNT CSS */
