--- a/django_server/dublin_bus/users/templates/users/account.html
+++ b/django_server/dublin_bus/users/templates/users/account.html
@@ -2,9 +2,17 @@
 {% load static %}
 
 {% block content %}
+{% load crispy_forms_tags %}
+    <div class="content-section">
+      <div class="media">
+        <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+        <div class="media-body">
+          <h2 class="account-heading">{{ user.username }}</h2>
+          <p class="text-secondary">{{ user.email }}</p>
+          <p class="text-secondary">Leap card Balance: {{ user.profile.leap_balance }}</p>
 
-
-
-<h1>Welcome Person</h1>
+        </div>
+      </div>
+    </div>
 
 {% endblock content %}
