fixed BS4 UI issues and improved the journey planner UI. There is now a div that can be used for directions that pops up from the bottom of the page. The weather app is not made yet, but the placement of it has been decided. These features are still VERY buggy. I will fix the bugs, but the features are made for prosperity's sake

--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -169,10 +169,22 @@ p, input, label {
     position: absolute;
     z-index: 5;
     border: 1px solid#252d5a;
+    font-family: Orienta, sans-serif;
   }
   #directions {
-    position: relative;
+    position: absolute;
     z-index: 5;
     background-color: #fff;
+    border: 1px solid#252d5a;
+    font-family: Orienta, sans-serif;
   
+  }
+  #close {
+    width: 20px;
+    margin-left: 100px;
+    cursor: pointer;
+  }
+  #directions-container {
+    position: relative;
+    height: 60px;
   }
