--- a/django_server/dublin_bus/bus/templates/bus/base_layout.html
+++ b/django_server/dublin_bus/bus/templates/bus/base_layout.html
@@ -8,8 +8,8 @@
     <meta charset="utf-8">
     <title>Dublin Bus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">   
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
@@ -42,6 +42,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'tourism' %}">Tourism</a>
+          </li>
+          <li>
+              <div>Here's the weather</div>
           </li>
       </ul>
     </div>
