added initial app prediction

--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -46,6 +46,7 @@
         </form>
       
         <input id="submit" type="button" form="form1" class="btn btn-warning btn-info btn-lg" value="Submit" onclick="myFunction()" style="margin-top: 10px; margin-bottom: 10px;">
+        <div id='precitionResult'></div>
     </div>
   
     <script>
