Fixed some of the bugs in the journey planner and direction planner jquery.Did some CSS styling and added the BS4 icon library to use in the app for certain things. More improvements needed, and date and time picker need to be fixed because jquery broke it :(.

--- a/django_server/dublin_bus/bus/static/bus/css/styles.css
+++ b/django_server/dublin_bus/bus/static/bus/css/styles.css
@@ -177,14 +177,10 @@ p, input, label {
     background-color: #fff;
     border: 1px solid#252d5a;
     font-family: Orienta, sans-serif;
-  
+    display: none;
+    height: 33%;
+
   }
-  #close {
-    width: 20px;
-    margin-left: 100px;
-    cursor: pointer;
-  }
-  #directions-container {
-    position: relative;
-    height: 60px;
+  #test2, #test3, #test {
+    font-family: Orienta, sans-serif;
   }
