--- a/django_server/dublin_bus/bus/templates/bus/index.html
+++ b/django_server/dublin_bus/bus/templates/bus/index.html
@@ -2,9 +2,9 @@
 {% load static %} 
 
 {% block content %}
-<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#floating-panel" id="ok">Hide Planner</button>
+<button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#floating-panel" id="JP-btn">Hide Planner</button>
 <div id="floating-panel" class="card col-md-3 collapse-show">
-        <h3 class="card-title">Journey Planner</h3>
+        <h3 class="card-title">Journey Planner<i class="fas fa-cloud">15C</i></h3>
         <form id="form1" class="form">
           <div class="form-group">
             <label>From:</label>
@@ -33,18 +33,18 @@
 <!-- This code below will one day be the pop up journey guide that tells you step by step things -->
 
 
-    <div><div id="map"> hello </div>    </div>
-    <div is="directions-container">
-    <div id="directions" class="card col-sm-6">  
+    <div><div id="map"> hello </div></div>
+    <div id="directions-container">
+    <div id="directions" class="card col-md-3">  
       <div id="row">
-      <p id="test"></p>
-      <p id="test2"></p>
-      <p id="test3"></p>
-      <span class="btn-primary" id="close">close</span>
+        <h3 class="card-title">Directions</h3>
+        <i class="fas fa-bus" style='color:green'></i><p id="test"></p>
+        <i class='fas fa-map-pin' style='color:red'></i><p id="test2"></p>
+        <i class='far fa-clock'></i><p id="test3"></p>
+      <button class="btn-primary" id="close">Close</button>
     </div>
         </div>
-        </div></div>
-    
+        </div>
         <script src="{% static 'bus/js/input.js' %}"></script>
 <!--Jquery for map-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
