fixed the date picker, I need to get the date to display correctly and incorporate time, but the calendar pops up now which is fun. I shall try to do this tomorrow because I am tired now. This is the most frustrating part of the UI and I spent all day trying to get the calendar to help make a selection and it was awful. please be nice

--- a/django_server/dublin_bus/bus/templates/bus/base_layout.html
+++ b/django_server/dublin_bus/bus/templates/bus/base_layout.html
@@ -8,11 +8,14 @@
     <meta charset="utf-8">
     <title>Dublin Bus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">   
+    <!-- Jquery file -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Bootstrap things -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <!-- style for bootstrap icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <!-- CSS and Favicon -->
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <link rel="stylesheet" href="{% static 'bus/css/styles.css' %}">       
 </head>
@@ -59,7 +62,7 @@
         {% endblock %}
     </div>
 </div>
-<div id="huh" class="footer-basic">
+<div class="footer-basic">
     <footer>
         <ul class="list-inline">
             <li class="list-inline-item"><a href="{% url 'home' %}">Home</a></li>
@@ -70,5 +73,6 @@
         <p class="copyright" style="font-family: Orienta, sans-serif;">Group 8 © 2020</p>
     </footer>
 </div>
+
 </body>
 </html>
